added pacth and delete user routes
