# docs/swagger.json
@@ -86,13 +86,13 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/error.AppError"
+                            "$ref": "#/definitions/appError.AppError"
                         }
                     },
                     "409": {
                         "description": "Conflict",
                         "schema": {
-                            "$ref": "#/definitions/error.AppError"
+                            "$ref": "#/definitions/appError.AppError"
                         }
                     }
                 }
@@ -105,6 +105,15 @@
                     "application/json"
                 ],
                 "summary": "Get account",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Your email",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -117,7 +126,7 @@
         }
     },
     "definitions": {
-        "error.AppError": {
+        "appError.AppError": {
             "type": "object",
             "properties": {
                 "message": {
